<resources>
    <string name="app_name">Iamra Course</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="base_validation_field_required">%1$s is required</string>
    <string name="base_validation_field_email">%1$s must be a valid email</string>
    <string name="base_validation_field_min_max">%1$s must be %2$d-%3$d characters</string>
    <string name="base_validation_password_lowercase">%1$s must contain lowercase letter</string>
    <string name="base_validation_password_uppercase">%1$s must contain uppercase letter</string>
    <string name="base_validation_password_number">%1$s must contain number</string>
    <string name="base_validation_password_symbol">%1$s must contain symbol</string>
    <string name="base_validation_password_not_match">%1$s does not match</string>
    <string name="base_validation_phone_invalid">Invalid phone number (example: 081234567890)</string>
    <string name="base_validation_image_too_large">Image is too large</string>
    <string name="base_validation_dob_future">Date of birth cannot be in the future</string>
    <string name="base_validation_dob_invalid">Invalid date format (yyyy-MM-dd)</string>
    <string name="base_validation_enum_invalid">Please select from available options</string>
    <string name="login_cancelled">Login cancelled</string>
    <string name="login_failed">Login failed</string>
    <string name="login_with_google_failed_to_get_email">Failed to get email</string>
    <string name="login_with_google_login_with">"Login with: "</string>
    <string name="login_with_google_google_account_not_found">Google account not found</string>
    <string name="login_with_google_failed_to_connect_to_google_check_your_internet_connection">Failed to connect to Google. Check your internet connection.</string>
    <string name="publicc">Public</string>
    <string name="privatee">Private</string>
    <string name="junior">Junior</string>
    <string name="middle">Middle</string>
    <string name="advanced">Advanced</string>
    <string name="paid">Paid</string>
    <string name="free">Free</string>
    <string name="learner">learner</string>
    <string name="employee">employee</string>
    <string name="jobless">jobless</string>
    <string name="onboarding_title_1">The best platform to learn coding flexibly!</string>
    <string name="onboarding_desc_1">Improve your programming skills with experienced instructors and an interactive community.</string>
    <string name="onboarding_desc_2">After completing all the materials, you will receive an official certificate as proof of expertise that can be used for your career or portfolio!</string>
    <string name="onboarding_desc_3">Every Student who purchases your course will contribute to your income. The more Students who learn, the more you earn!</string>
    <string name="filter_by_created_at">Filter By Created At</string>
    <string name="filter_by_level">Filter By Level</string>
    <string name="filter_by_status">Filter By Status</string>
    <string name="fragment_user_auth_register_already_have_an_account">Already have an account?</string>
    <string name="fragment_user_auth_login_don_t_have_an_account">Don\'t have an account?</string>
    <string name="home">Home</string>
    <string name="course">Course</string>
    <string name="certificate">Certificate</string>
    <string name="setting">Setting</string>
    <string name="certificates">Certificates</string>
    <string name="courses">Courses</string>
    <string name="student">Student</string>
    <string name="instructor">Instructor</string>
    <string name="search">Search</string>
    <string name="detail">Detail</string>
    <string name="buy">Buy</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="sort_by">Sort By</string>
    <string name="level">Level</string>
    <string name="latest">Latest</string>
    <string name="longest">Longest</string>
    <string name="status">Status</string>
    <string name="login">Login</string>
    <string name="error">Error</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="show">Show</string>
    <string name="additional_info">Additional Info</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="choose_image">Choose Image</string>
    <string name="authentication">Authentication</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="email">Email</string>
    <string name="warning_no_login">For data security, your session has expired, please log in again.</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="discussion_forum">Discussion Forum</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="arrow_back">&lt;</string>
    <string name="ilham_rahmat_akbar">Ilham Rahmat Akbar</string>
    <string name="type_here">Type Here…</string>
    <string name="role_register">Role Register</string>
    <string name="summary">Summary</string>
    <string name="resume">Resume</string>
    <string name="category">Category</string>
    <string name="certificate_verification">Certificate Verification</string>
    <string name="certificate_id">Certificate Id</string>
    <string name="price">Price</string>
    <string name="notes">Notes</string>
    <string name="requirements">Requirements</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="message">Message</string>
    <string name="see_cart">See Cart</string>
    <string name="carts">Carts</string>
    <string name="progress">Progress</string>
    <string name="questions">Questions</string>
    <string name="reviews">Reviews</string>
    <string name="transactions">Transactions</string>
    <string name="progresses">Progresses</string>
    <string name="no_data">No Data</string>
    <string name="neww">New</string>
    <string name="old">Old</string>
    <string name="check_coupon">Check Coupon</string>
    <string name="biography">Biography</string>
    <string name="full_name">Full Name</string>
    <string name="role">Role</string>
    <string name="created_at">Created At</string>
    <string name="login_now">Login Now</string>
    <string name="login_later">Login Later</string>
    <string name="discount">Discount</string>
    <string name="max_redemptions">Max Redemptions</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="order_id">Order Id</string>
    <string name="actions">Actions</string>
    <string name="pay">Pay</string>
    <string name="you_ve_paid">You\'ve paid</string>
    <string name="coupon">Coupon</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="course_id">Course Id</string>
    <string name="course_title">Course Title</string>
    <string name="question">Question</string>
    <string name="edit">Edit</string>
    <string name="answer">Answer</string>
    <string name="add">Add</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="are_you_sure_you_want_to_delete_this">Are you sure you want to delete this</string>
    <string name="yes">Yes</string>
    <string name="review">Review</string>
    <string name="course_description">Course Description</string>
    <string name="rating">Rating</string>
    <string name="fragment_public_certificates_warning">Certificate Not Found</string>
    <string name="total_sections">Total Sections</string>
    <string name="download_certificate">Download Certificate</string>
    <string name="uncompleted">Uncompleted</string>
    <string name="completed">Completed</string>
    <string name="retrofit_client_warning_no_auth">Your login status is not authenticated, please re-login to continue the process.</string>
    <string name="finish">Finish</string>
    <string name="completed_sections">Completed Sections</string>
    <string name="download_completed">Download Completed</string>
    <string name="account">Account</string>
    <string name="bank">Bank</string>
    <string name="alias">Alias</string>
    <string name="fragment_public_certificate_verify_text_1">Certificate of Completion</string>
    <string name="fragment_public_certificate_verify_text_2">This is to certify that</string>
    <string name="fragment_public_certificate_verify_text_3">has successfully completed the course:</string>
    <string name="fragment_public_home_student_question_1">Is this platform suitable for beginners?</string>
    <string name="fragment_public_home_student_answer_1">Yes! We offer courses from basic to advanced, with easy-to-follow explanations and real-world projects to help you learn coding step-by-step.</string>
    <string name="fragment_public_home_student_question_2">What programming languages are available?</string>
    <string name="fragment_public_home_student_answer_2">We provide courses in JavaScript, Python, HTML/CSS, React, Node.js, and many others. We also regularly add new content based on industry needs.</string>
    <string name="fragment_public_home_student_question_3">Do I get a certificate after completing a course?</string>
    <string name="fragment_public_home_student_answer_3">Upon completing a course, you\'ll receive a digital certificate which you can use to boost your CV or LinkedIn profile.</string>
    <string name="fragment_public_home_student_question_4">Is course access lifetime?</string>
    <string name="fragment_public_home_student_answer_4">Once enrolled, you can access the course anytime with no time limit. Learn at your own pace!</string>
    <string name="fragment_public_home_student_question_5">How do I join a class?</string>
    <string name="fragment_public_home_student_answer_5">You just need to create a free account, then you can immediately start free classes or pay for premium ones.</string>
    <string name="fragment_public_home_student_question_6">Are there mentors or discussion forums?</string>
    <string name="fragment_public_home_student_answer_6">Yes, you can interact with peers in forums or community groups, and some courses include access to mentors for guidance.</string>
    <string name="fragment_public_home_student_question_7">Can I learn using my phone?</string>
    <string name="fragment_public_home_student_answer_7">Absolutely! Our website is accessible from smartphones, tablets, or desktops. Learn anytime, anywhere.</string>
    <string name="fragment_public_home_instructor_question_1">How do I become an instructor on this platform?</string>
    <string name="fragment_public_home_instructor_answer_1">To become an instructor, sign up and complete the course submission form. Our team will review your content and provide feedback or approval.</string>
    <string name="fragment_public_home_instructor_question_2">Do I need prior teaching experience?</string>
    <string name="earnings">Earnings</string>
    <string name="socials">Socials</string>
    <string name="answers">Answers</string>
    <string name="coupons">Coupons</string>
    <string name="lesson">Lesson</string>
    <string name="lessons">Lessons</string>
    <string name="section">Section</string>
    <string name="sections">Sections</string>
    <string name="social">Social</string>
</resources>