<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_private"
            android:icon="@drawable/ic_member_role_profile"
            android:title="@string/role" />
        <item
            android:id="@+id/nav_additional_info"
            android:icon="@drawable/ic_drawer_profile"
            android:title="@string/additional_info" />
        <item
            android:id="@+id/nav_authentication"
            android:icon="@drawable/ic_drawer_authentication"
            android:title="@string/authentication" />
        <item
            android:id="@+id/nav_email"
            android:icon="@drawable/ic_drawer_email"
            android:title="@string/email" />
        <item
            android:id="@+id/nav_role_register"
            android:icon="@drawable/ic_drawer_role_register"
            android:title="@string/role_register" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_drawer_logout"
            android:title="@string/logout" />
    </group>
</menu>